--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tp1 Framework</title>
-  </head>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
-  <link rel="stylesheet" href="css/style.css">
-  <body ng-app="myApp">
-    <header>
-      <nav>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index1.html">Criacão de categorias</a></li>
-        <li><a href="index2.html">Criacão de taregas</a></li>
-      </nav>
-    </header>
-
-    <div ng-controller='myController as $ctrl'>
-
-      <div class="principal">
-        <table>
-            <caption>Tarefas não feitas</caption>
-            <th>Tarefas Prontas?</th>
-            <th>Lista de Tarefa</th>
-            <th>Categoria</th>
-            <tr ng-repeat="tarefa in $ctrl.tarefas  | filter:{feito:false}">
-              <td> <input type="checkbox" ng-model="tarefa.feito"></td>
-              <td>{{tarefa.nome}}</td>
-              <td>{{tarefa.categoria}}</td>
-            </tr>
-       </table>
-       <table>
-           <caption>Tarefas Feitas</caption>
-           <th>Tarefas Prontas?</th>
-           <th>Lista de Tarefa</th>
-           <th>Categoria</th>
-           <tr ng-repeat="tarefa in $ctrl.tarefas  | filter:{feito:true}">
-             <td> <input type="checkbox" ng-model="tarefa.feito"></td>
-             <td>{{tarefa.nome}}</td>
-             <td>{{tarefa.categoria}}</td>
-           </tr>
+<head>
+  <meta charset="utf-8">
+  <title>Tp1 Framework</title>
+</head>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<link rel="stylesheet" href="css/style.css">
+<body ng-app="myApp">
+  <header>
+    <nav>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="index1.html">Exibição de categorias</a></li>
+      <li><a href="index2.html">Criacão de tarefas</a></li>
+      <li><a href="index3.html">Criacão de categorias</a></li>
+    </nav>
+  </header>
+  <h1>Home Lista única</h1>
+  <div ng-controller='myController as $ctrl'>
+    <div class="principal">
+      <table>
+        <caption>Tarefas não feitas</caption>
+        <th>Tarefas Prontas?</th>
+        <th>Lista de Tarefa</th>
+        <th>Categoria</th>
+        <tr ng-repeat="tarefa in $ctrl.tarefas  | filter:{feito:false}">
+          <td> <input type="checkbox" ng-model="tarefa.feito"></td>
+          <td>{{tarefa.nome}}</td>
+          <td>{{tarefa.categoria}}</td>
+        </tr>
+        <hr>
       </table>
-      </div>
-
+      <table>
+        <caption>Tarefas Feitas</caption>
+        <th>Tarefas Prontas?</th>
+        <th>Lista de Tarefa</th>
+        <th>Categoria</th>
+        <tr ng-repeat="tarefa in $ctrl.tarefas  | filter:{feito:true}">
+          <td> <input type="checkbox" ng-model="tarefa.feito"></td>
+          <td>{{tarefa.nome}}</td>
+          <td>{{tarefa.categoria}}</td>
+        </tr>
+        <hr>
+      </table>
     </div>
-
-  </body>
+  </div>
+</body>
 </html>
