--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tp1 Framework</title>
+    <title>Tp1 Framework +Tarefa</title>
   </head>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
@@ -11,14 +11,30 @@
     <header>
       <nav>
         <li><a href="index.html">Home</a></li>
-        <li><a href="index1.html">Criacão de categorias</a></li>
-        <li><a href="index2.html">Criacão de taregas</a></li>
+        <li><a href="index1.html">Exibição de categorias</a></li>
+        <li><a href="index2.html">Criacão de tarefas</a></li>
+        <li><a href="index3.html">Criacão de categorias</a></li>
       </nav>
     </header>
-teste3
-    <div ng-controller="myController">
-      {{tarefa.details.nome}}
+    <div ng-controller="myController as $ctrl">
+      <div class="principal">
+        <h3>Selecione a categoria que queira adicionar a tarefa tarefa</h3>
+        <select ng-model="this.seleciona" name="Seleciona categoria">
+          <option value="" ng-repeat="categori in $ctrl.categorias">{{categori}}</option>
+        </select>
+        <hr>
+        <h3>Adicione uma tarefa</h3>
+        <form ng-submit="$ctrl.plusTarefa()">
+          <input type="text" name="Inserir tarefa" placeholder="Insira uma tarefa" ng-model="$ctrl.nome" required="required">
+          <input type="submit" name="Enviar">
+        </form>
+        <hr>
+        <table>
+          <tr ng-repeat="tarefa in $ctrl.tarefas">
+            <td>{{tarefa.nome}}  {{tarefa.categoria}}</td>
+          </tr>
+        </table>
+      </div>
     </div>
-
   </body>
 </html>
