--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="index1.html">Exibição de categorias</a></li>
       <li><a href="index2.html">Criacão de tarefas</a></li>
       <li><a href="index3.html">Criacão de categorias</a></li>
+      <li><a href="respostasEmail.html">Resposta e-mail</a></li>
     </nav>
   </header>
   <h1>Home Lista única</h1>
